[package]
name = "fetch-all-active-and-upcoming-audits-contests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
